fix text align issues

--- a/public/styles/AboutMe.css
+++ b/public/styles/AboutMe.css
@@ -10,9 +10,12 @@
   height: auto;
   width: 100vw;
   background-color: #f2f2f2;
+  margin-top: 50px;
+  margin-bottom: 60px;
 }
 
 .left-container {
+  /* border: 1px solid red; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,7 +57,8 @@
   margin-top: 40px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 35px;
+  /* font-size: 35px; */
+  font-size: 3vw;
 }
 
 .bio-text {
@@ -66,4 +70,5 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
+  /* text-align: center; */
 }
